# nng

./: .gitmodules  CMakeLists.txt
ref/api/: index.html  memory.html
src/: CMakeLists.txt  nng.c  nng.h
src/core/: completion.c  completion.h  defs.h  event.c  event.h  init.c  init.h  msgqueue.c  msgqueue.h  nng_impl.h  platform.h  socket.c  taskq.c  taskq.h  timer.c  timer.h
src/platform/: CMakeLists.txt
src/platform/deos/: CMakeLists.txt  README.md  deos_alloc.c  deos_atomic.c  deos_clock.c  deos_debug.c  deos_file.c  deos_impl.h  deos_ipc.c  deos_pipe.c  deos_random.c  deos_resolv.c  deos_sockaddr.c  deos_socketpair.c  deos_sockfd.c  deos_tcp.c  deos_thread.c  deos_udp.c
src/platform/posix/: posix_debug.c  posix_rand.c
src/sp/transport/tls/: CMakeLists.txt  tls_tran_test.c
src/tools/nnztagent/: CMakeLists.txt  README.md  nnztagent.h  nnztagent_client.c  nnztagent_main.cpp  nnztagent_sha3.c  nnztagent_sha3.h  nnztagent_utils.c  nnztagent_utils.h  nnztagent_utils_posix.c  nnztagent_utils_win32.c
src/transport/zerotier/: zerotier.adoc  zerotier.c
tests/: CMakeLists.txt  zt.c
tools/nnztagent/: nnztagent_client.c  nnztagent_getopt.hpp
